<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/colorSalle">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/SalleTitle"
                    android:text="@string/preferences_connection_title"
                    android:id="@+id/preferences_connection_title" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences_connection_button_text"
                    android:id="@+id/preferences_connection_button"
                    style="@style/SalleButton"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="onDisconnectButtonClick"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/preferences_invert_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textAppearance="@style/SalleTitle"
                    android:text="@string/preferences_invert_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#FFFFFF"
                    android:text="@string/preferences_invert_description"
                    android:layout_below="@+id/preferences_invert_title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>

                <CheckBox
                    android:id="@+id/preferences_invert_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="onInvertControlsButtonClick"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onChangeThemeButtonClick">

                <TextView
                    android:id="@+id/preferences_theme_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textAppearance="@style/SalleTitle"
                    android:text="@string/preferences_theme_title" />

                <TextView
                    android:id="@+id/preferences_theme_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="#FFFFFF"
                    android:text="Text"
                    android:layout_below="@+id/preferences_theme_title"
                    android:layout_marginStart="16dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

